--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -17,5 +17,7 @@
 @import 'default/lists'
 
 @import 'components/header'
+@import 'components/forms'
+@import 'components/publish'
 
 @import 'utilities/helpers'
