--- a/src/sass/default/_forms.sass
+++ b/src/sass/default/_forms.sass
@@ -1,7 +1,8 @@
 %initial-field
   border: none
   border-bottom: 1px solid $dark
-  background-color: $white
+  background-color: rgba(0, 0, 0, 0.1)
+  padding: 10px
 
   &:focus
     outline: none
