--- a/src/sass/components/_forms.sass
+++ b/src/sass/components/_forms.sass
@@ -1,3 +1,11 @@
 label
   display: block
-  margin-bottom: 20px
+  color: lighten($dark, 50%)
+
+input[type="radio"],
+input[type="checkbox"]
+  margin-bottom: 3rem
+
+  + label
+    display: inline-block
+    margin-bottom: 3rem
