--- a/src/sass/default/_forms.sass
+++ b/src/sass/default/_forms.sass
@@ -1,8 +1,10 @@
 %initial-field
   border: none
   border-bottom: 1px solid $dark
-  background-color: rgba(0, 0, 0, 0.1)
+  background-color: transparent
   padding: 10px
+  width: 100%
+  margin-bottom: 3rem
 
   &:focus
     outline: none
