--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -20,5 +20,6 @@
 @import 'components/header'
 @import 'components/forms'
 @import 'components/publish'
+@import 'components/toasts'
 
 @import 'utilities/helpers'
