--- a/src/sass/components/_toasts.sass
+++ b/src/sass/components/_toasts.sass
@@ -4,8 +4,14 @@
     padding: 10px 20px
     border: 1px solid $dark
     border-radius: 6px
+    text-align: center
     
     &--error
         background-color: #f5c6cb
         border-color: #f5c6cb
         color: #721c24
+
+    &--info
+        color: #0c5460
+        background-color: #d1ecf1
+        border-color: #bee5eb
